force-app/main/default/objects/SeasonTicketWTNProduct__c/SeasonTicketWTNProduct__c.object-meta.xml
<CustomObject>
    <label>Season Ticket WTN Product</label>
    <nameField>
        <displayFormat>STWP-{00000}</displayFormat>
        <label>Season Ticket WTN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Season Ticket WTN Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>