force-app/main/default/objects/SeasonTicketWTNProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Season Ticket WTN Products</relationshipLabel>
    <relationshipName>Season_Ticket_WTN_Products</relationshipName>
    <type>Lookup</type>
</CustomField>