force-app/main/default/objects/SeasonTicketWTNProduct__c/fields/Waste_Category__c.field-meta.xml
<CustomField>
    <fullName>Waste_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waste Category</label>
    <referenceTo>Waste_Category__c</referenceTo>
    <relationshipLabel>Season Ticket WTN Products</relationshipLabel>
    <relationshipName>Season_Ticket_WTN_Products</relationshipName>
    <type>Lookup</type>
</CustomField>