force-app/main/default/objects/SeasonTicketWTNProduct__c/fields/WTN__c.field-meta.xml
<CustomField>
    <fullName>WTN__c</fullName>
    <label>WTN</label>
    <referenceTo>SeasonTicketWTN__c</referenceTo>
    <relationshipLabel>Season Ticket WTN Products</relationshipLabel>
    <relationshipName>SeasonTicketWTNProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>